// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process YAML nodes correctly correctly creates nodes from JSON which is an array of objects 1`] = `
Array [
  Array [
    Object {
      "blue": true,
      "children": Array [],
      "funny": "yup",
      "id": "whatever [0] >>> YAML",
      "internal": Object {
        "contentDigest": "73901821b17d5aa9dd6026181f73b64c",
        "type": "TestYaml",
      },
      "parent": "whatever",
    },
  ],
  Array [
    Object {
      "blue": false,
      "children": Array [],
      "funny": "nope",
      "id": "whatever [1] >>> YAML",
      "internal": Object {
        "contentDigest": "f624311d932d73dcd416d2a8bea2b67d",
        "type": "TestYaml",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process YAML nodes correctly correctly creates nodes from JSON which is an array of objects 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue": true,
        "children": Array [],
        "funny": "yup",
        "id": "whatever [0] >>> YAML",
        "internal": Object {
          "contentDigest": "73901821b17d5aa9dd6026181f73b64c",
          "type": "TestYaml",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "- blue: true
  funny: yup
- blue: false
  funny: nope
",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/yaml",
        },
        "name": "test",
        "parent": "SOURCE",
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "blue": false,
        "children": Array [],
        "funny": "nope",
        "id": "whatever [1] >>> YAML",
        "internal": Object {
          "contentDigest": "f624311d932d73dcd416d2a8bea2b67d",
          "type": "TestYaml",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "- blue: true
  funny: yup
- blue: false
  funny: nope
",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/yaml",
        },
        "name": "test",
        "parent": "SOURCE",
      },
    },
  ],
]
`;
